# custom_admin

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
custom_admin/: .isort.cfg  __init__.py
custom_admin/api/: __init__.py  action_functions.py  backends.py  inline_relation.py  permissions.py  urls.py  viewset_info.py
custom_admin/api/actions/: __init__.py  action_result.py  admin_export.py  admin_import.py  delete_action.py  export_csv_action.py  view_actions_mixin.py
custom_admin/api/fields/: __init__.py  base.py  char.py  choice.py  files.py  int.py  json.py  numbers.py  relation.py
custom_admin/api/filters/: __init__.py  base_admin_filter.py  choices.py  date_range.py
custom_admin/api/inlines/: __init__.py  export_csv_inline.py  inline_graph.py  inline_table.py  inlines_type.py  interfaces.py  view_inline_mixin.py
custom_admin/api/serializers/: __init__.py  auth_response.py  base_serializer.py  profile.py
custom_admin/api/tests/: test_filters.py  test_scheme_get.py  urls.py
custom_admin/api/views/: __init__.py  admin_log.py  autocomplete.py  base_admin_viewset.py  change_language.py  get_sections.py  token_auth.py
custom_admin/controllers/: __init__.py  admin_log_manager.py  custom_metadata.py  filters_schema.py  permissions.py  schema_generator.py
custom_admin/management/commands/: custom_admin_viewsets_list.py  sync_permissions.py
custom_admin/migrations/: 0001_initial.py  0002_auto_20220826_1734.py  0003_remove_adminlog_hall_alter_adminlog_staff.py
custom_admin/models/: __init__.py  admin_log.py
custom_admin/static/: manifest.json
custom_admin/static/css/: app.css  chunk-3ef8a5a8.css  chunk-8b69702c.css  chunk-a7c7287a.css  chunk-ecedfa6a.css  chunk-elementUI.css
custom_admin/static/custom_admin/: index-2znd7FHV.js  index-4IPVEXmu.js  index-6vPH8m5f.js  index-7BDoPw9H.js  index-B2ST37Z6.css  index-B7kruqJh.css  index-BNZ2RECP.js  index-BOPHXzxg.css  index-BOoQQW5z.js  (+34 more)
custom_admin/templates/: index.html
custom_admin/tests/: test_language.py  test_scheme_get.py
custom_admin/utils/: __init__.py  async_mixin.py  colors.py  get_schema.py  register_admin_viewsets.py
custom_admin/views/: __init__.py  admin_page.py  template.py
vue_frontend/: index.html  package-lock.json  package.json  vite.config.mjs  vue.config.js
vue_frontend/src/: main.js  permission.js  router.js
vue_frontend_vue2/: .eslintrc.yml  jsconfig.json  package.json
vue_frontend_vue2/public/: index.html
vue_frontend_vue2/src/: main.js
(+168 files in other folders)
