[metadata]
name = django-customvueadmin
version = attr: custom_admin.__version__
url = https://innova-group-llc.github.io/custom_admin_docs/
description = A custom admin interface on Vue 3 and Vuetify with DRF backend that tries to Keep It Simple.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://innova-group-llc.github.io/custom_admin_docs/
    Source = https://github.com/Innova-Group-LLC/custom_admin

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore = E203
max-line-length = 120
